--- a/edgee-component.toml
+++ b/edgee-component.toml
@@ -21,3 +21,4 @@ output_path = "slack.wasm"
 title = "Slack Webhook URL"
 type = "string"
 required = true
+description = "The incoming webhook such as https://hooks.slack.com/services/T00000000/B00000000/XXXXXXXXXXXXXXXXXXXXXXXX"
