--- a/edgee-component.toml
+++ b/edgee-component.toml
@@ -14,10 +14,11 @@ wit-version = "1.0.0"
 icon-path = "slack.png"
 
 [component.build]
-command = "cargo build --target wasm32-wasip2 --target-dir ./target && mv ./target/wasm32-wasip2/debug/slack_message_component.wasm ./slack.wasm"
+command = "cargo build --release --target wasm32-wasip2 --target-dir ./target && mv ./target/wasm32-wasip2/release/slack_message_component.wasm ./slack.wasm"
 output_path = "slack.wasm"
 
 [component.settings.webhook_url]
 title = "Slack Webhook URL"
 type = "string"
 required = true
+description = "The incoming webhook such as https://hooks.slack.com/services/T00000000/B00000000/XXXXXXXXXXXXXXXXXXXXXXXX"
