--- a/edgee-component.toml
+++ b/edgee-component.toml
@@ -14,7 +14,7 @@ wit-version = "1.0.0"
 icon-path = "slack.png"
 
 [component.build]
-command = "cargo build --release --target wasm32-wasip2 --target-dir ./target && mv ./target/wasm32-wasip2/release/slack_message_component.wasm ./slack.wasm"
+command = "cargo build --release --target wasm32-wasip2 --target-dir ./target && rm -f ./slack.wasm && mv ./target/wasm32-wasip2/release/slack_message_component.wasm ./slack.wasm"
 output_path = "slack.wasm"
 
 [component.settings.webhook_url]
