update doc url in manifest

--- a/edgee-component.toml
+++ b/edgee-component.toml
@@ -7,7 +7,7 @@ version = "1.0.0"
 category = "edge-function"
 subcategory = "wasm-function"
 description = "Edge function component to send Slack messages."
-documentation = "https://github.com/edgee-cloud/slack-message-component"
+documentation = "https://www.edgee.cloud/docs/components/edge-functions/sendgrid"
 repository = "https://github.com/edgee-cloud/slack-message-component"
 language = "Rust"
 wit-version = "1.0.0"
