--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 debug/
 target/
 .edgee/
-component.wasm
+slack.wasm
 
 
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
