--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,16 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-anyhow = "1.0.86"
-wit-bindgen = "0.41.0"
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
+anyhow = "1.0.98"
+bytes = "1.10.1"
+http = "1.3.1"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.141"
 waki = "0.5.1"
+wit-bindgen = "0.43.0"
+
 
 [dev-dependencies]
+lazy_static = "1.5.0"
 pretty_assertions = "1.4.1"
-uuid = { version = "1.10.0", features = ["v4"] }
+uuid = { version = "1.17.0", features = ["v4"] }
